--- a/employee/config/packages/security.yaml
+++ b/employee/config/packages/security.yaml
@@ -1,11 +1,12 @@
 security:
-    # Password hashing configuration
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
 
-    # User providers
     providers:
-        users_in_memory: { memory: null }
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: email
 
     firewalls:
         dev:
@@ -14,31 +15,12 @@ security:
 
         main:
             lazy: true
-            provider: users_in_memory
+            provider: app_user_provider
             custom_authenticator: App\Security\LoginFormAuthenticator
             logout:
                 path: app_logout
-
-            remember_me:
-                secret: '%kernel.secret%'
-                lifetime: 604800 # 7 days
-                path: /
-
-            # Enable CSRF protection
-            login_throttling:
-                max_attempts: 5
-                interval: '15 minutes'
+                target: app_login
 
     access_control:
-    # Example: restrict access to specific routes based on roles
-    # - { path: ^/admin, roles: ROLE_ADMIN }
-    # - { path: ^/profile, roles: ROLE_USER }
-
-when@test:
-    security:
-        password_hashers:
-            Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
-                algorithm: auto
-                cost: 4 # Lowest possible value for bcrypt
-                time_cost: 3 # Lowest possible value for argon
-                memory_cost: 10 # Lowest possible value for argon
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/employee, roles: ROLE_USER }
