--- a/employee/config/routes.yaml
+++ b/employee/config/routes.yaml
@@ -3,3 +3,7 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+app_employee_index:
+    path: /employee
+    controller: App\Controller\EmployeeController::index
+    methods : GET
